# aumogpt-ufes

./: .env  .gitignore  README.md  aumogpt_results.json  evaluate_on_test.py  generate_finetuning_dataset.ipynb  generate_finetuning_dataset.py  gradio_evaluate.py  pyproject.toml  resultados.md
data/: AUMOGPT-dataset-final.json  aumogpt_test.json  aumogpt_train.json  aumogpt_validation.json  dados_gpt_1.json
datasets/: aumogpt_train.json  aumogpt_train_100.json  aumogpt_train_old.json  aumogpt_validation_100.json  aumogpt_validation_old.json
evaluation/: eval_config_adapter.yml  eval_config_base.yml  readme.md
oumi/: lora_llama3.3-3b.yml  lora_llama3.3-3b_inference.yml  qlora_llama3.3-3b.yml  qlora_llama3.3-3b_inference.yml  readme.md  sft_llama3.3-3b.yml  sft_llama3.3-3b_inference.yml  upload_adapter_to_hf.py
