[tool.poetry]
name = "aumo-gpt-disciplina"
version = "0.1.0"
description = ""
authors = ["GuilhermeAumo <guilherme@aumo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datasets = "^3.3.2"
huggingface-hub = "^0.29.1"
huggingface = "^0.0.1"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
