[tool.poetry]
name = "aumo-gpt-disciplina"
version = "0.1.0"
description = ""
authors = ["GuilhermeAumo <guilherme@aumo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dotenv = "^0.9.9"
oumi = {extras = ["gpu"], version = "^0.1.8"}
lm-eval = {extras = ["vllm"], version = "^0.4.8"}
huggingface = "^0.0.1"
huggingface-hub = "^0.29.3"
bitsandbytes = "^0.45.3"
gradio = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
